<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterAcvtivity">

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_birth_date"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/inputs_design"
        android:padding="20dp"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    
    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:background="@drawable/inputs_design"
        android:hint="@string/username_input"
        android:padding="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username"
        android:background="@drawable/inputs_design"
        android:hint="@string/password_input"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />
    <EditText
    android:id="@+id/register_phone_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/register_password"
    android:background="@drawable/inputs_design"
    android:hint="@string/register_phone_number"
    android:padding="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android:textColor="@color/colorPrimaryDark"
    android:textColorHint="@color/colorPrimaryDark"
    android:textStyle="bold"
    android:textSize="17sp" android:inputType="phone|number"
        android:imeOptions="actionNext"
        android:maxLines="1"
    />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_phone_number"
        android:background="@drawable/inputs_design"
        android:hint="@string/register_email"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/register_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:background="@drawable/inputs_design"
        android:hint="@string/birth_date"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:maxLines="1"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="279dp"
        android:layout_height="74dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/shopping_online" />

</RelativeLayout>
